<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 Razeware LLC
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
  ~ distribute, sublicense, create a derivative work, and/or sell copies of the
  ~ Software in any work that is designed, intended, or marketed for pedagogical or
  ~ instructional purposes related to programming, coding, application development,
  ~ or information technology.  Permission for such use, copying, modification,
  ~ merger, publication, distribution, sublicensing, creation of derivative works,
  ~ or sale is expressly withheld.
  ~
  ~ This project and source code may use libraries or frameworks that are
  ~ released under various Open-Source licenses. Use of those libraries and
  ~ frameworks are governed by their own individual licenses.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/toolbarLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextColor="?attr/colorOnPrimary" />

  </com.google.android.material.appbar.AppBarLayout>

  <ImageView
      android:id="@+id/helmetIcon"
      android:layout_width="72dp"
      android:layout_height="72dp"
      android:contentDescription="@string/contentDescriptionHelmetIcon"
      app:layout_constraintBottom_toTopOf="@+id/introHeader"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
      app:layout_constraintVertical_chainStyle="packed"
      app:srcCompat="@drawable/ic_f1_helmet"
      app:tint="?attr/colorPrimary" />

  <TextView
      android:id="@+id/introHeader"
      style="?attr/textAppearanceBody1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/intro_header_text"
      android:textAlignment="center"
      app:layout_constraintBottom_toTopOf="@+id/startButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/helmetIcon"
      android:layout_margin="16dp"/>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/startButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/introStartButtonText"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/introHeader" />

  <TextView
      android:id="@+id/iconCredits"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="4dp"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:text="@string/helmetIconCredits"
      android:textAppearance="?attr/textAppearanceCaption"
      android:textSize="10sp"
      android:textStyle="italic"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:textAlignment="center"
      tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>